# Faster-Whisper-Studio

./: .gitignore  DESCRIPTION.md  README.md  build_exe.py  gui.py  main.py  pyproject.toml  start_app.bat  transcriber.py  vad.md  verify_vad_report.py  workers.py
