[project]
name = "faster-whisper-gui-app"
version = "0.1.0"
description = "A powerful desktop GUI application for accurate audio/video transcription using OpenAI's Whisper model."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15.10",
    "pyqt5-qt5==5.15.2",
    "faster-whisper>=1.0.0",
    "ctranslate2==4.4.0",
    "tokenizers>=0.13.0",
    "huggingface-hub>=0.21.0",
    "onnxruntime>=1.14.0",
    "psutil>=5.9.0",
    "deepfilternet==0.5.6",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "soundfile==0.13.1",
    "librosa>=0.10.0",
    "python-docx>=0.8.11",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "assets",
    "*.spec"
]
